# genius-agent

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_ignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  OAI_CONFIG_LIST  README.md  a2a.json  agent_constructs.py  compose.yaml  debug.Dockerfile  docker-compose.yml  genius_autogen.py  knowledge_graph.db.wal  pyproject.toml  reproduce_graph.py  requirements.txt  requirements_api.txt  requirements_chromadb.txt  requirements_core.txt  requirements_lmm.txt  requirements_memgpt.txt  requirements_pgvector.txt  requirements_rag.txt  settings.yml  setup.py  swagger.json  test_discovery.py  test_llm.py  test_master_graph.py  test_output.txt  test_portainer.py  test_repro.py
config_examples/: agent_configs.yml  llm_configs.yml
genius_agent/: A2A_AGENTS.md  CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  OAI_CONFIG_LIST  USER.md  __init__.py  __main__.py  agent.py  agent_api.py  agent_configs.json  agent_configs.yml  agent_configs_backup.yml  agent_construct.py  agent_constructs.py  agent_model.py  agent_server.py  genius_agent.py  genius_agent.py.bak  genius_agent_api.py  genius_agent_cli.py  genius_autogen.py  genius_mcp.py  graph_config.py  master_graph.py  mcp.py  mcp_config.json  prometheus_collector.py  skill_agent_config.py  tools.py  utils.py  version.py
genius_agent/agent/: AGENTS.md  IDENTITY.md  templates.py
genius_agent/agent_data/: CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  MEMORY.md  mcp_config.json  templates.py
genius_agent/agent_functions/: bash_func.py  file_func.py  get_stock_func.py  media_downloader_func.py  oss_insights_func.py  python_func.py
genius_agent/skills/a2a_client copy/: SKILL.md
genius_agent/skills/comprehensive-search/: SKILL.md
genius_agent/skills/git-cli-docs/: SKILL.md
genius_agent/skills/git-cli-docs/reference/: about.md  about_trademark.md  api-index.md  api-trace2.md  book.md  cheat-sheet.md  community.md  doc_credential-helpers.md  doc_ext.md  docs.md  docs_api-index.md  docs_api-trace2.md  docs_git-add.md  docs_git-am.md  docs_git-apply.md  (+511 more)
genius_agent/skills/gofastmcp-docs/: SKILL.md
genius_agent/skills/ingest/: SKILL.md
genius_agent/skills/ingestion/: SKILL.md
genius_agent/skills/manage-document-database/: SKILL.md
genius_agent/skills/manage-knowledge-graph-database/: SKILL.md
genius_agent/skills/manage-vector-database/: SKILL.md
genius_agent/skills/pydantic-ai-docs/: SKILL.md
genius_agent/skills/python-sandbox/: SKILL.md
genius_agent/skills/web-scraping/: SKILL.md
genius_agent/structs/: agent_structs.py  llm_config_structs.py
genius_agent/utils/: __init__.py  patch_utils.py
graphiti/falkordb/: config.yaml
graphiti/kuzu/: config.yaml
graphiti/neo4j/: config.yaml
scripts/: check_otel_integration.py  consolidate_env.py  debug_graph.py  debug_mcp.py  debug_parallel.py  debug_portainer_call.py  debug_stdio.py  inspect_falkor.py  sync_mcp_config.py  test_ui_launch.sh  validate_a2a_agent.py  validate_base_services.sh  validate_falkordb.py
tests/: test_genius_agent_wrapper_coverage.py  test_graph_flow_integration.py  test_kuzu_init.py  test_llm.py  test_portainer.py  test_portainer_flow.py  verify_patch.py  verify_skills_loading.py
tests/integration/: test_genius_harness.py  test_graph_api_backend.py
(+175 files in other folders)
