[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genius-agent"
version = "2.13.26"
description = "GeniusAgent Search Engine MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "universal-skills[web-crawler,web-search]",
    "agent-utilities[agent,logfire]>=0.2.12"]

[project.scripts]
genius-agent = "genius_agent.agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
genius_agent = [ "mcp_config.json", "agent/**"]

[tool.setuptools]
include-package-data = true
